<resources>
    <string name="app_name">FlexingMarvel</string>

    <string name="text_desc">Description: %1$s</string>
    <string name="text_page_count">Page count: %1$d</string>
    <string name="text_retry">Retry</string>
    <string name="text_add_favorite">Add to favorite</string>
    <string name="text_remove_favorite">Remove from favorite</string>

    <string name="text_placeholder_title">Title</string>
    
    <string name="text_accessibility_thumbnail">Thumbnail</string>

    <string name="text_series_error">No related series found</string>
    <string name="text_events_error">No related events found</string>
    <string name="text_characters_error">No related characters found</string>
    <string name="text_error_fetching">An error occurred</string>
    <string name="text_error_no_results">No results found for this query</string>
    <string name="text_footer_error">Results could not be loaded</string>

    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_night_mode">Night mode</string>

    <string name="nav_char">Characters</string>
    <string name="nav_series">Series</string>
    <string name="nav_events">Events</string>
    <string name="nav_details">Details</string>
</resources>