<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.events.details.DetailsEventFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:theme="@style/TextDetails"
            app:layout_constraintEnd_toStartOf="@id/iv_details"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/text_placeholder_title" />

        <ImageView
            android:id="@+id/iv_details"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/text_accessibility_thumbnail"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_large"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="@string/text_desc" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="tv_desc,iv_details" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_default"
            android:backgroundTint="@color/green"
            android:gravity="center"
            android:textColor="@color/textColor"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_header"
            tools:text="@string/text_add_favorite" />

        <TextView
            android:id="@+id/tv_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_series"
            android:theme="@style/TextDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_library" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_series"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_series"
            tools:listitem="@layout/item_details" />

        <TextView
            android:id="@+id/tv_series_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_series_error"
            android:textColor="@color/textColorAccent"
            android:textSize="@dimen/text_size_default"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_series"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pb_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/textColorAccent"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_series" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="rv_series,pb_series,tv_series_error" />

        <TextView
            android:id="@+id/tv_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nav_char"
            android:theme="@style/TextDetails"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_series" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_characters"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_characters"
            tools:listitem="@layout/item_details" />

        <TextView
            android:id="@+id/tv_characters_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_characters_error"
            android:textColor="@color/textColorAccent"
            android:textSize="@dimen/text_size_default"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_characters"
            tools:visibility="visible" />

        <ProgressBar
            android:id="@+id/pb_characters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/textColorAccent"
            android:indeterminateTintMode="src_atop"
            android:progressTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_characters" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>